methods.picture.MethodsPictureLarge.scala.error
Compilation error:
MethodsPictureLarge:5: error: not found: value Ligne
  Ligne()
  ^