methods.picture.MethodsPictureLarge.scala.code
override def run() {
  
  def Motif2(){
  for (j<-1 to 3){
  Ligne()
  }
}
 for (l<- 1 to 9){
   Motif2()
   gauche();avance(7);droite()
 }
}